<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WOW\'s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="razor_api_key">rzp_test_usEmd5LTJQKCTA</string>
    <string name="facebook_app_id">292751556811555</string>
    <string name="fb_login_protocol_scheme">fb292751556811555</string>
    <string name="facebook_client_token">a90f6cd6c68e4edf612e263a95692fd6</string>
    <string name="government_address_id_proof">government address id proof</string>
    <string name="post_bio"><b>Akshay Syal</b>Lorem lpsum is simply dummy text of the printing and typesetting industry. Lorem lpsum...</string>
    <string name="by_continuing_you_agree_to_the_terms_of_service_and_privacy_policy">By continuing you agree to the <b>Terms of Service</b> and Privacy Policy.</string>
    <string name="abc">abc</string>
    <string name="_00458547">0012</string>
    <string name="scarllet">Scarllet</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="india">India</string>
    <string name="_91">+91</string>
    <string name="todo">TODO</string>
    <string name="resend"><b>Resend</b></string>
    <string name="united_states">United States</string>
    <string name="countries">Countries</string>
    <string name="description">description</string>
    <string name="no_car_available">No car available now . Cars effect will be more attractive in live Room</string>
    <string name="no_frames">No frames available yet. If you buy and use it you ll get a decoration on your avtar</string>
    <string name="no_bubble">Currently no bubble available .A bubble can make you shine in the streem.</string>
    <string name="you_do_not">You do not have a Color ID at the moment Color ID adds unique features and color to your ID card.</string>
    <string name="hide_country_and_online_time">Hide country and online time</string>
    <string name="a_mystery">A Mystery Man just entered the room</string>
    <string name="account_security"><![CDATA[Account & Security]]></string>
    <string name="whatfamily">A family is an organization created by users on their own Users apply to join the family and work together with like _ minded partners to keep the family growing</string>
    <string name="tips_buy">Sure to buy this car ? If use the car, you \'ll get more attention in the Live Room.</string>
    <string name="recharge">Not enough coins, want to recharge?</string>
    <string name="click_to_add_your_tag">Let others Know who you are and what you like</string>
    <string name="more_tags">More tags, more like_minded friend</string>
    <string name="hobby">Hobby</string>
    <string name="Skill">Skill</string>
    <string name="instageam_certification">Instageam certification</string>
    <string name="ans">Answer emotional question</string>
    <string name="save">Save</string>
    <string name="agora_app_id">86f31e0182524c3ebc7af02c9a35e0ca</string>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="msg_connection_error">Connection error, please check the network settings or make sure channel name/access token are valid</string>
    <string name="cant_create_family">You need a wealth level >=30 to create a family. Upgrade your level or try to join a fun family!</string>
    <string name="label_title_resolution">Resolution</string>
    <string name="label_title_frame_rate">Frame Rate(fps)</string>
    <string name="helpcentertvdes">•	The transaction may take 10-30 minutes to proceed.\n•	Please try to refresh the page.\n•	If you did not get the  Diamonds/Coins/Item after refreshing and no refund was sent, please share feedback ID, Time , details of issues we will check and feedback to you . Our services email is hello@wows.co.in</string>
    <string name="helpcentertvdes2">•	The number of Diamonds in your account increases when you receive gifts.\n•	Diamonds can be used to redeem Coins .\n•	The corresponding platform rules stipulate the means to obtain and calculate Diamonds , and Wow’s has the right of final interpretation and execution.\n•	If your behavior violates any laws, regulations or wows platform rules. or if the Diamonds in your account are earned as a result of malicious refunds, card frauds, cyber hacking and other illegal operations, no matter whether adverse consequences have been caused.\n•	Wow’s reserves the right to take appropriate action and right to deduct from the Diamonds balance in your account at its sole discretion.
Other issues</string>
    <string name="helpcentertvdes3">•	If you meet any other issues, like: if the item can’t be purchased, please contact on hello@wows.co.in and state the issues you have met, we will sort it out as soon as possible.</string>
    <string name="privacytv">On the profile page, your country will appear as unknown country(exclusive privilege of VIP 4)</string>
    <string name="privacydialogtv">VIP exclusive privilege.Activate VIP 4 then you can use it.</string>
    <string-array name="string_array_resolutions">
        <item>160x120</item>
        // 120P
        <item>320x180</item>
        // 180P
        <item>320x240</item>
        // 240P the default one
        <item>640x360</item>
        // 360P
        <item>640x480</item>
        // 480P
        <item>1280x720</item>
        // 720P
    </string-array>
    <string-array name="string_array_frame_rate">
        <item>1</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
        // the default one
        <item>24</item>
        <item>30</item>
    </string-array>
    <string-array name="string_array_bit_rate">
        <item>80</item>
        // 120P
        <item>160</item>
        // 180P
        <item>200</item>
        // 240P
        <item>400</item>
        // 360P
        <item>500</item>
        // 480P
        <item>1000</item>
        // 720P
    </string-array>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="start_spotlight">Start Spotlight</string>
    <string name="close_spotlight">Close Spotlight</string>
    <string name="next_target">Next Target</string>
    <string name="send_any_">Send any gift for 1 first time</string>
    <string name="giftwalltv">1.What is the gift wall?</string>
    <string name="giftwalltv1">A single gift of more than 5,000 coins will appear on the gift wall!</string>
    <string name="giftwalltv2">2.How to grab the front row of the gift wall?</string>
    <string name="giftwalltv3">The larger the number of gold coins in a single gift, the more advanced the display.</string>
    <string name="giftwalltv4">3.How long will the records on the gift will be kept?</string>
    <string name="giftwalltv5">24 Hours</string>
    <string name="liverecordtvdes">In the stream of these region(XM,TR,FR,DE,IT,PH,Pk,VN,TH,,CG),donations between users from other countries will not be counted to redeem diamonds.</string>
    <string name="streamingDes">Streaming duration: 104 Minutes Guest duration: 276</string>
    <string name="tv1">A family is an organization created by user on their own.\nUsers apply to join the family and work together with like-\nminded partners to keep the family growing.</string>
    <string name="tv2">Create a family: you can create a family after your wealth level\nmeet the requirement,Upload the family cover,name nad\nnotice,you can run your family after passing the review.\n\nJoin the family: On the family Home page, click "Join Family" to\nInitiate the application,and you can join the family after passing the family review.</string>
    <string name="tv3">No, one person can only create or join the family.</string>
    <string name="tv4">The number of members is related to the family level, and the\ninitial number is 150.The higher the family level, the greater the capacity.</string>
    <string name="tv5">A family can have to 5 administrators</string>
    <string name="tv6">sort by the total contribution of family members.</string>
    <string name="tv7">The family level represents the strength of the family.The\nstronger the family,the higher the level.The current family\nlevel is divided into four levels:steel,bronze,silver,and gold. </string>
    <string name="tv8">As the level increases, the upper limit of member and\nadministrators will continue to increase;at the same 6time, the \nstyle of family badge and family frame will continue to\nupgrade as the level increases. Upgrade to the Golden Family\nto unlock the exclusive gifts of the golden family. </string>
    <string name="tv9">Calculate the sum of Contribution of family members in\neach season.The higher the contribution value,the higher the\nlevel.The level will be settled at the end of the season as the\ninitial level for the next season.</string>
    <string name="tv10"></string>
    <string name="question_7">7. What is the family level?</string>
    <string name="quesition10des">If a user quits a family, their family level remains the same, yet contribution will be reset;</string>
    <string name="qustin10des1">Users\' starting contribution level after joining the family is 0.</string>
    <string name="welcome">Welcome hai Apka Annu Dvarra Ayojit birthday party main</string>
    <string name="birthday_party_de_yarr">Birthday party de yarr</string>
    <string name="will_start_on">will start on</string>
    <string name="click">click_to_add_your_tag</string>
    <string name="welocome_">welcome hai apka shubam ki biethday party mein!</string>
    <string name="you_event">Your event has been created. The event will start at 8:30. Don\'t miss out</string>
    <string name="incometx4">3. Please note that the gifts rececived from rooms  will be automatically converted into diamonds(not include lucky gifts.), the gifts received in moment will not be automatically converted into diamond temporarily.</string>
    <string name="subscriptiontx">You haven\'t subscribed to any event.Check out on the at the what\'s on page!</string>
    <string name="send_dialog_tv">Are you sure you want to send this car to your friend </string>
    <string name="exclusiveStringGiftTx">Only VIP 7 can give exclusive gifts. After VIP 7 is activated.you can enter the live studio to give this gift.  When you give a gift,it will be displayed in other rooms.</string>
    <string name="add_to_blocked_list">Add to blocked list</string>
    <string name="report">Report</string>
    <string name="admintxt1">1.Way to add: Cilck on Add as admin at mini profile of any users in the room;</string>
    <string name="admintxt2">2.Permanently valid unless you remove him; </string>
    <string name="admintxt21">3. You can set up 8 admins. 1 admin can be set for each </string>
    <string name="admintxt3">30 charming level increased; 4.Admin privileges in this room:</string>
    <string name="admintxt4">(1) Kick out from the seat;</string>
    <string name="admintxt5">(2) Kick out from the room;</string>
    <string name="admintxt6">(3) Invite audience to Mic;</string>
    <string name="admintxt7">(4) Close the Mic;</string>
    <string name="admintxt8">(3) Ban from chatting;</string>
    <string name="admintxt9">(4) Set voice effect;</string>
    <string name="admintxt10">(7) Play music</string>
    <string name="lucky_rules1">1.By sending a lucky bag you coins will be consumed. When others open it,they will follow you!</string>
    <string name="lucky_rules2">2.You will get coins randomly when you open it.</string>
    <string name="lucky_rules3">3.After 30 mintues,unspent coins will be returned to the sender.</string>
    <string name="lucky_rules4">4.Not get any wealthy exp by sending lucky bags.</string>
    <string name="lucky_rules5">5.Fraud is forbidden, otherwise you will be banned forever.</string>
</resources>