<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LuckyBagRulesFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/luckyBagToRL"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/luckyRulesBackImg"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/back__1_" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:singleLine="true"
                android:text="Lucky Bag Rules"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/luckyBagToRL"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lucky_rules1"
                android:fontFamily="sans-serif-medium"
                android:layout_marginVertical="2dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lucky_rules2"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginVertical="2dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lucky_rules3"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginVertical="2dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lucky_rules4"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginVertical="2dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lucky_rules5"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginVertical="2dp"
                android:textSize="16sp" />


        </LinearLayout>

    </RelativeLayout>


</FrameLayout>