<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.Profile.RechargePackage.HelpCenterFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <RelativeLayout
           android:id="@+id/helpCenterTopRL"
           android:layout_width="match_parent"
           android:layout_height="40dp">
           <ImageView
               android:id="@+id/helpCenterBackImg"
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:src="@drawable/cross"
               android:layout_marginStart="20dp"
               android:layout_centerVertical="true"
               android:contentDescription="@string/description"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Help Center"
               android:fontFamily="sans-serif-medium"
               android:textSize="18sp"
               android:textColor="@color/black"
               android:layout_centerVertical="true"
               android:layout_toRightOf="@+id/helpCenterBackImg"
               android:layout_marginStart="20dp"/>
       </RelativeLayout>
<!--       <TextView-->
<!--           android:layout_width="wrap_content"-->
<!--           android:layout_height="wrap_content"-->
<!--           android:textColor="@color/black"-->
<!--           android:textSize="14sp"-->
<!--           android:text="Help Center"-->
<!--           android:layout_below="@+id/helpCenterTopRL"-->
<!--           android:layout_marginStart="30dp"-->
<!--           android:layout_marginTop="30dp"/>-->

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/red"
           android:textSize="14sp"
           android:text="1. The purchased Diamonds/Coins/Items didn't arrive?"
           android:layout_marginStart="30dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="30dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/grey"
           android:textSize="14sp"
           android:text="@string/helpcentertvdes"
           android:layout_marginStart="30dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="30dp"
           />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/red"
           android:textSize="14sp"
           android:text="2. What's Diamonds?"
           android:layout_marginStart="30dp"
           android:layout_marginTop="20dp"
           android:layout_marginEnd="30dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/grey"
           android:textSize="14sp"
           android:text="@string/helpcentertvdes2"
           android:layout_marginStart="30dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="30dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/red"
           android:textSize="14sp"
           android:text="3. Other issues"
           android:layout_marginStart="30dp"
           android:layout_marginTop="20dp"
           android:layout_marginEnd="30dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/grey"
           android:textSize="14sp"
           android:text="@string/helpcentertvdes3"
           android:layout_marginStart="30dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="30dp"/>



   </LinearLayout>

</FrameLayout>