<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:baselineAligned="false"
        android:paddingVertical="2dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/photo2" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="-40dp"
                android:layout_toEndOf="@id/profile_image"
                android:contentDescription="@string/abc"
                android:src="@drawable/ic_icon_2" />


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/topUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/scarllet"
                android:textColor="@color/black"
                android:textSize="14sp"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/topUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-3dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/_00458547"
                android:textColor="#716F6F"
                android:textSize="12sp"
                app:drawableLeftCompat="@drawable/user_normal_4" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>